fixing csrf and changing context root

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9000
-server.context-path=/
+server.context-path=/server
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/oauth
 spring.datasource.username=oauth
